--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,66 +4,37 @@
 
   @layer base {
     :root {
-      --background: 0 0% 100%;
-      --foreground: 224 71.4% 4.1%;
+      --background: 35 100% 88%;
+      --foreground: 224 51.4% 4.1%; /* text color black */
 
-      --card: 0 0% 100%;
-      --card-foreground: 224 71.4% 4.1%;
+      --card: 35 100% 88%;
+      --card-foreground: 224 51.4% 4.1%; /* text color black */
 
-      --popover: 0 0% 100%;
-      --popover-foreground: 224 71.4% 4.1%;
+      --popover: 35 100% 88%;
+      --popover-foreground: 224 51.4% 4.1%; /* text color black */
 
-      --primary: 220.9 39.3% 11%;
+      --primary: 35 100% 66%;
       --primary-foreground: 210 20% 98%;
 
-      --secondary: 220 14.3% 95.9%;
-      --secondary-foreground: 220.9 39.3% 11%;
+      --secondary: 35 47% 62%;
+      --secondary-foreground: 35 47% 95%;
 
-      --muted: 220 14.3% 95.9%;
-      --muted-foreground: 220 8.9% 46.1%;
+      --muted: 35 47% 62%;
+      --muted-foreground: 35 100% 82%;
 
-      --accent: 220 14.3% 95.9%;
-      --accent-foreground: 220.9 39.3% 11%;
+      --accent: 35 47% 62%;
+      --accent-foreground: 0 0% 30%;
 
       --destructive: 0 84.2% 60.2%;
       --destructive-foreground: 210 20% 98%;
 
-      --border: 220 13% 91%;
-      --input: 220 13% 91%;
-      --ring: 224 71.4% 4.1%;
+      --border: 35 100% 78%;
+      --input: 35 100% 82%;
+      --ring: 35 100% 75%; /* text color black */
 
       --radius: 0.5rem;
     }
 
-    .dark {
-      --background: 224 71.4% 4.1%;
-      --foreground: 210 20% 98%;
-
-      --card: 224 71.4% 4.1%;
-      --card-foreground: 210 20% 98%;
-
-      --popover: 224 71.4% 4.1%;
-      --popover-foreground: 210 20% 98%;
-
-      --primary: 210 20% 98%;
-      --primary-foreground: 220.9 39.3% 11%;
-
-      --secondary: 215 27.9% 16.9%;
-      --secondary-foreground: 210 20% 98%;
-
-      --muted: 215 27.9% 16.9%;
-      --muted-foreground: 217.9 10.6% 64.9%;
-
-      --accent: 215 27.9% 16.9%;
-      --accent-foreground: 210 20% 98%;
-
-      --destructive: 0 62.8% 30.6%;
-      --destructive-foreground: 210 20% 98%;
-
-      --border: 215 27.9% 16.9%;
-      --input: 215 27.9% 16.9%;
-      --ring: 216 12.2% 83.9%;
-    }
   }
 
   @layer base {
